From version 2.0 to 2.1:
* Improved character count system (thanks to Omar G. - http://forums.mybb-plugins.com/Thread-OUGC-Post-Character-Count-Enhancement)
* Deleted users' posts would display 0 points and the donate link: when showing the user as "Guest"
* Added donation spam control (default is 5 per 15 minutes)
* Points are now removed when soft deleting (but not removed twice if the post/thread is permanently)
* Points are given back when restoring posts
* Fixed bug in points deducted when deleting threads with replies (would deduct more points)
* Editing soft deleted posts does not give/deduct points based on character count.
* newpoints_add_setting will first check if it can update the setting rather than inserting one with a duplicate name (thanks to Omar G.)
* newpoints_add_template will first check if it can update the template rather than inserting one with a duplicate name; it will also remove existing duplicate templates (thanks to Omar G.)
* Fixed one bug related to the deleting posts action: points for replies wouldn't be counted properly some times
* Added 'numeric' field type to settings.

From version 1.9.9 to 2.0:
* Compatible with MyBB 1.8.
* Fixed bug in the points format, related to thousands and decimals separators.
* Characters within quote tags are not counted anymore.
* Guest posts / Deleted users' posts showed points in the user details section when in fact they don't have any possible points.

From version 1.9.8 to 1.9.9:
* Fixed major bug in the newpoints_addpoints function which would cause malfunction if it was executed more than once per page.

From version 1.9.7 to 1.9.8:
* Plugins can now use the hook newpoints_xmlhttp.
* Forum Rules did not affect quick reply posting.
* Donation number_format warning on some PHP installations.
* Fixed 'newpoints_statistics' template problem.

From version 1.9.6 to 1.9.7:
* Fixed a high risk vulnerability (SQL injection).